# stocks-bot

./: .env.example  .gitignore  CLAUDE.md  DAILY-SUMMARY.md  README.md  env.template  pyproject.toml  requirements.txt
.claude/commands/: daily-summary.md  market-open.md  midday.md  portfolio.md  pre-market.md  trade.md  weekly-review.md
ar3-platform/: .gitignore  DESIGN.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ar3-platform/public/: ar3.urdf
ar3-platform/public/ar3-meshes/: ATTRIBUTION.md
ar3-platform/sidecar/: pyproject.toml  server.py
ar3-platform/sidecar/tests/: test_health.py
ar3-platform/src/: App.css  App.tsx
ar3-platform/src-tauri/: Cargo.toml  tauri.conf.json
ar3-platform/src-tauri/capabilities/: default.json
ar3-platform/src-tauri/src/: lib.rs  main.rs  sidecar.rs
ar3-platform/src-tauri/src/transport/: mod.rs  sim.rs
ar3-platform/src/gcode/: parser.ts  sample.ts  toolpath.ts
ar3-platform/src/panels/: JointPanel.tsx  ProgramPanel.tsx  (+2 more)
backtest/: engine.py  metrics.py
bot/: config.py  entry.py  executor.py  exit.py  indicators.py  logger.py  scanner.py  state.py
bot/data/: alpaca_data.py
cli/: refresh_universe.py  run_trader.py
data/: dashboard-sheet-id.txt
data/universe/: exclusions.csv
docs/plans/: 2026-04-25-momentum-bot-plan.md
docs/specs/: 2026-04-25-momentum-bot-design.md
memory/: PROJECT-CONTEXT.md  RESEARCH-LOG.md  TRADE-LOG.md  TRADING-STRATEGY.md  WEEKLY-REVIEW.md
ops/: crontab.txt  stop_trader.sh
routines/: README.md  daily-summary.md  intraday-check.md  market-open.md  midday.md  pre-market.md  weekly-review.md
scripts/: alpaca.sh  diagnose_backtest.py  openai.sh  perplexity.sh  run-routine.sh  sheets.sh  sheets_report.py  telegram.sh
tests/: test_alerts.py  test_backtest_engine.py  test_config.py  test_data_alpaca.py  test_entry.py  test_executor.py  test_indicators.py  test_logger.py  test_metrics.py  test_risk.py  test_sheets_report.py  test_trader_loop.py  test_universe.py
tests/fakes/: fake_alpaca.py
(+41 files in other folders)
