[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stocks_monitoring"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["bot*", "cli*", "backtest*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "integration: end-to-end tests that hit the network (skipped by default)",
]
