[project]
name = "ar3-sidecar"
version = "0.1.0"
description = "Kinematics sidecar for the AR3 Platform"
requires-python = ">=3.10"
dependencies = [
    "ikpy>=3.3",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
