[package]
name = "ar3-platform"
version = "0.0.1"
description = "AR3 desktop platform"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ar3_platform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.20"

[features]
custom-protocol = ["tauri/custom-protocol"]
